--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.edu.gdmec.android.boxuegu">
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
@@ -24,7 +24,10 @@
         <activity android:name=".activity.ModifyPwdActivity" />
         <activity android:name=".activity.ChangeUserInfoActivity" />
         <activity android:name=".activity.UserInfoActivity" />
-        <activity android:name=".activity.ExercisesDetailActivity"></activity>
+        <activity android:name=".activity.ExercisesDetailActivity" />
+        <activity android:name=".activity.VideoListActivity" />
+        <activity android:name=".activity.VideoPlayActivity" />
+        <activity android:name=".activity.PlayHistoryActivity"></activity>
     </application>
 
 </manifest>
